# RevisionAssistant

./: CMakeLists.txt  DictAddPage.qml  DictEditPage.qml  DictProcessingPage.qml  FileSelectionStatus.qml  Main.qml  MainPage.qml  QrPage.qml  README.MD  RevisionAssistant.qmlproject  RevisionAssistant.qmlproject.qtds  config.h.in  dictcontroller.cpp  dictcontroller.h  filecontroller.cpp  filecontroller.h  main.cpp  qmlmodules  qtquickcontrols2.conf  quizcontroller.cpp  quizcontroller.h  resources.qrc
.github/workflows/: build_executable.yaml  build_on_android.yaml  build_on_linux.yaml  build_on_wasm.yaml  build_on_windows.yaml  build_project.yaml
android/: AndroidManifest.xml
config/: config.h  org.Bsoulmindy.RevisionAssistant.desktop  resource.rc  vercel.json
db/: dict.sqlite  sql_structure.sql
html/: index.html
imports/RevisionAssistant/: qmldir
src/: CMakeLists.txt  Main.qml  main.cpp
src/CustomComponents/: CMakeLists.txt  CompleteButton.qml  DictEditListViewDelegate.qml  FileOptionListDelegate.qml  FileSelectionStatus.qml  InfoDialog.qml  QrPageListViewDelegate.qml  qmldir
src/components/: PrimaryText.qml
src/controllers/: dictcontroller.cpp  dictcontroller.h  dictfilescontroller.cpp  dictfilescontroller.h  filecontroller.cpp  filecontroller.h  fileselectorcontroller.cpp  fileselectorcontroller.h  quizcontroller.cpp  quizcontroller.h
src/exceptions/: file_invalid_json_exception.cpp  file_invalid_json_exception.h  fileexception.cpp  fileexception.h  json_exception.cpp  json_exception.h  object_invalid_json_exception.cpp  object_invalid_json_exception.h  repo_exception.h  run_out_of_entries.cpp  run_out_of_entries.h
src/factories/: dict_repo_factory.cpp  dict_repo_factory.h
src/models/: dict_mode_enum.h  dict_repo_enum.h  question_response_entries_set.cpp  question_response_entries_set.h  question_response_entry.cpp  question_response_entry.h
src/repositories/: dict_json_repo.cpp  dict_json_repo.h  dict_repo_interface.h
src/utils/: filesystemutils.cpp  filesystemutils.h
src/views/: DictAddPage.qml  DictAddPageUi.ui.qml  DictEditPage.qml  DictEditPageUi.ui.qml  DictProcessingPage.qml  DictProcessingPageUi.ui.qml  DictsPage.qml  DictsPageUi.ui.qml  MainPage.qml  MainPageUi.ui.qml  QrPage.qml  QrPageUi.ui.qml  qmldir  qmldir (copy)
src/views/DictAddPage/: DictAddPage.qml
src/views/DictAddPage/DictProcessingPage/: DictProcessingPage.qml
src/views/DictEditPage/: DictEditPage.qml
src/views/QrPage/: QrPage.qml  QrPageUi.ui.qml
src/views/QrPage/CompleteButton/: qmldir
tests/: tst_dictcontroller.qml  tst_dictfilescontroller.qml  tst_filecontroller.qml  tst_fileselectorcontroller.qml  tst_main.cpp  tst_qml_main.cpp  tst_quizcontroller.qml  tst_setup.cpp  tst_setup.h
tests/testgroup/: tst_dict_json_repo.cpp  tst_dict_json_repo.h  tst_dict_repo_factory.cpp  tst_dict_repo_factory.h  tst_filesystemutils.cpp  tst_filesystemutils.h  tst_group_interface.h
